Add EncryptionMechanismto and support Entity-Framework.

--- a/src/DotNetCore/appsettings.json
+++ b/src/DotNetCore/appsettings.json
@@ -6,5 +6,12 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "your-db-connection-string-with-encryption"
+  },
+  "CustEntry": {
+    /// User Salt should be any uuid.
+    "key": "your salt key with decryption" 
   }
 }
