--- a/src/DotNetCore/project.json
+++ b/src/DotNetCore/project.json
@@ -26,7 +26,7 @@
   "tools": {
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
     "Microsoft.EntityFrameworkCore.Tools": {
-      "version": "1.1.0-*",
+      "version": "1.1.0-preview4-final",
       "imports": [
         "dotnet5.6",
         "portable-net45+win8"
